--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.20.0",
+		"@fontsource/poppins": "^4.5.10",
+		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
-		"@typescript-eslint/eslint-plugin": "^5.10.1",
-		"@typescript-eslint/parser": "^5.10.1",
-		"autoprefixer": "^10.4.2",
+		"@typescript-eslint/eslint-plugin": "^5.46.1",
+		"@typescript-eslint/parser": "^5.46.1",
+		"autoprefixer": "^10.4.13",
 		"cookie": "^0.5.0",
+		"daisyui": "^2.45.0",
 		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"postcss": "^8.4.5",
-		"postcss-load-config": "^3.1.1",
-		"prettier": "^2.5.1",
-		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.1",
-		"tailwindcss": "^3.0.12",
-		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^3.4.1",
+		"postcss": "^8.4.20",
+		"postcss-load-config": "^3.1.4",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^2.10.2",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.2.4",
+		"tslib": "^2.4.1",
+		"typescript": "~4.6.4",
+		"vite": "^4.0.1"
 	},
-	"type": "module",
-	"dependencies": {
-		"vite": "^3.1.6"
-	}
+	"type": "module"
 }
