--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"autoprefixer": "^10.4.13",
+		"chart.js": "^4.1.1",
 		"cookie": "^0.5.0",
 		"daisyui": "^2.45.0",
 		"eslint": "^7.32.0",
