--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
+		"html2canvas": "^1.4.1",
 		"postcss": "^8.4.20",
 		"postcss-load-config": "^3.1.4",
 		"prettier": "^2.8.1",
